# datachecker

./: Cargo.toml  lol.ipynb  metrics  pyproject.toml  t.csv.gz_  t.csv.gz_2  t.csv.gz_2_a  test.py  test.yaml
beers/: __init__.py
src/: helper.rs  io.rs  lib.rs  main.rs  missing.rs  numeric.rs  parser.rs  schema.rs
