[package]
name = "datachecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datachecker"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.25.1", features = ["decompress", "json"] }
pyo3 = "0.17.3"
yaml-rust = "0.4.5"